syntax = "proto3";

option go_package = ".;grpcgen";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message Message {
    string id = 1;
    string text = 2;
    Role role = 3;
    google.protobuf.Timestamp sent_at = 4;
    google.protobuf.StringValue client_id = 5;
}

enum Role {
    UNKNOWN = 0;
    USER = 1;
    OTOMO = 2;
}
